# interdimensional-oracle

./: .gitignore  README.md  pyproject.toml
backend/api/: endpoints.py  main.py  models.py
backend/core/: guardrails.py  prompts.py  rag.py  retriever.py
backend/data/: fetcher.py  indexer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: BrowsePanel.vue  ChatMessage.vue  ConfidenceBar.vue
frontend/src/composables/: useApi.js  useChat.js  useStream.js
frontend/src/constants/: index.js
scripts/: evaluate.py  evaluation_results.json  golden_dataset.py
tests/: test_guardrails.py
