[project]
name = "interdimensional-oracle"
version = "0.1.0"
description = "A RAG-powered AI agent for the Rick & Morty universe"
requires-python = ">=3.13"
authors = [
  { name = "Nagaraju Javisetty", email = "nagajavisetty143@gmail.com" }
]

dependencies = [
    "httpx==0.27.2",
    "tqdm==4.66.5",
    "chromadb== 1.5.9",
    "sentence-transformers==5.6.0",
    "anthropic==0.111.0",
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0"

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff.lint]
preview = true
extend-select = [
    "PLE", "PLW", "PLC", "PLR", "FAST", "I", "D419",
    "E501", "W291", "UP004", "C416", "B033", "E722"
]