[project]
name = "interdimensional-oracle"
version = "0.1.0"
description = "A RAG-powered AI agent for the Rick & Morty universe"
requires-python = ">=3.13"
authors = [
  { name = "Nagaraju Javisetty", email = "nagajavisetty143@gmail.com" }
]

dependencies = [
    "httpx==0.27.2",
    "tqdm==4.66.5",
    "chromadb==1.5.9",
    "sentence-transformers==5.6.0",
    "anthropic==0.111.0",
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "ragas==0.1.21",
    "langchain-anthropic==0.1.23",
    "datasets==5.0.0"

]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
extend-select = [
    "PLE", "PLW", "PLC", "PLR", "FAST", "I", "D419",
    "E501", "W291", "UP004", "C416", "B033", "E722"
]
[tool.ruff.lint.per-file-ignores]
"backend/core/prompts.py" = ["E501"]